--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,11 @@ under the License.
     <distributionManagement>
         <snapshotRepository>
             <id>oss-snapshot</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
         <repository>
             <id>oss-release</id>
-            <url>https://oss.sonatype.org/</url>
+            <url>https://s01.oss.sonatype.org/</url>
         </repository>
     </distributionManagement>
 
